        * The configure(1) script now requires that a C++ compiler be found if the "--with-noaaport"
          option is specified

    ldmd(1):
        * Demoted the logging level of some common connection losses to reduce the number of
          ERROR messages in the log file
        * Improved log message when select() fails
        * Improved logging and simplified up6_run()

    regutil(1):
        * Added "-l <logdest>" option to accomodate GitHub actions

    pqing(1):
        * Eliminated compilation error in "tty.c" under MacOS by including <sys/ioctl.h>

    LDM registry:
        * Ensured that the file-descriptor of the registry is close-on-exec

    rpc(3) library:
        * Eliminated compilation errors under MacOS by replacing bzero(), bset(), and bcmp() with
          POSIX equivalents
        * Demoted the logging level of some common connection losses to reduce the number of
          ERROR messages in the log file

    Logging:
        * In order to accomodate GitHub actions, changed the determination of whether or not to use
          the standard error stream from whether of not the process was a daemon to whether or not
          the standard error stream is open on /dev/null

    Documentation:
        * Changed the download site to downloads.unidata.ucar.edu and eliminated the FTP site
        * Added recommended home directory /opt/ldm or /home/ldm
        * Changed the installation instructions to "make install" by the LDM user and then "make
          root-actions" by the superuser

    Security:
        * Corrected code faults found by GitHub's CodeQL

    Devops:
        * A push to the "devel" and "master" branches on GitHub now causes "make distclean" to be
          executed on 2 Ubuntu systems and the latest MacOS system and the code to be scanned by
          CodeQL.
        * Modified Git hook "pre-commit" to ensure that the version ID in "configure.ac" is the
          same as the first word in "CHANGE_LOG" 